src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Resolution_of_Contact__c</fullName>
        <label>Resolution of Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Provided Authorization Services for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Insurance Benefits Information for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided In-Network Benefits Information for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Out-Of-Network Benefits Information for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Eyeconic Billing Information for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Claim(s) Information for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Coverage/Claims Coordination of Benefits Information with Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Benefits Information for Customer regarding Cobra or Open Enrollment Coverage</fullName>
                </value>
                <value>
                    <fullName>Provided Dr List for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Eligibility Information for Customer</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with ID Card Request</fullName>
                </value>
                <value>
                    <fullName>Provided Individual Plan Information for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Level Application Information to Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Level Frame Tech Information for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Level Frame Charging Information for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Level Tech Support for Customer</fullName>
                </value>
                <value>
                    <fullName>Provided Level Troubleshooting Information for Customer</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with Contact Lens Material Inquiry</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with Glasses Material Inquiry</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with Frames Only Material Inquiry</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with Spectacle Lenses Only Material Inquiry</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with Member ID Inquiry</fullName>
                </value>
                <value>
                    <fullName>Provided Member Info to Customer</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with Eyeconic My Account Issues</fullName>
                </value>
                <value>
                    <fullName>Provided Eyeconic Order Status Information for customer</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with new Eyeconic Order</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with Cancellation of their Eyeconic Order</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with existing Eyeconic Order</fullName>
                </value>
                <value>
                    <fullName>Assisted Customer with Eyeconic Order</fullName>
                </value>
                <value>
                    <fullName>Provided Eyeconic Prescription Information for Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Store_Number__c</fullName>
        <label>Retail Store Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EYE0001</fullName>
                </value>
                <value>
                    <fullName>EYE0002</fullName>
                </value>
                <value>
                    <fullName>EYE0003</fullName>
                </value>
                <value>
                    <fullName>EYE0004</fullName>
                </value>
                <value>
                    <fullName>EYE0005</fullName>
                </value>
                <value>
                    <fullName>EYE0006</fullName>
                </value>
                <value>
                    <fullName>EYE0007</fullName>
                </value>
                <value>
                    <fullName>EYE0008</fullName>
                </value>
                <value>
                    <fullName>EYE0009</fullName>
                </value>
                <value>
                    <fullName>EYE0010</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Right_Eye_and_Left_Eye_Quantity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Right Eye and Left Eye Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQ_Call_Reason__c</fullName>
        <label>SQ Call Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need to provide list</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SQ_Call_Type__c</fullName>
        <label>SQ Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Consult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SQ_Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SQ Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQ_Rep_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SQ Rep Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <inlineHelpText>Systematic Escalation of the Case is driven by the value in this field.</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                    <default>true</default>
                    <label>Minor</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Image__c</fullName>
        <formula>IF(Status_Number__c = 1, IMAGE(&quot;/resource/CaseSLAGreen&quot;,&quot;Good&quot;, 16,16), 
    IF( Status_Number__c = 2, IMAGE(&quot;/resource/CaseSLAYellow&quot;,&quot;Semi Good&quot;, 16,16),     
               IMAGE(&quot;/resource/CaseSLARed&quot;,&quot;Bad&quot;, 16,16)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Status Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a survey was sent on this Case.</description>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Time_Stamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Time Stamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Systematic_Escalation_Count__c</fullName>
        <inlineHelpText>Number of times the case has been systematically escalated.</inlineHelpText>
        <label>Systematic Escalation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Escalation_Count__c</fullName>
        <description>Total number of times the case has been escalated</description>
        <inlineHelpText>Total number of times the case has been escalated/re-assigned.</inlineHelpText>
        <label>Total Escalation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tray_or_RX__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tray or RX #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undeliverable_Queue_Start_Date_Time__c</fullName>
        <description>Date/Time in which case enters CC Undeliverable Queue</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Undeliverable Queue Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Role</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VB_Resolution_of_Contact__c</fullName>
        <formula>&apos;Provided information on&apos; + &apos; &apos; + TEXT(Reason_Details__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VB Resolution of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSPOne_Lab__c</fullName>
        <label>VSPOne Lab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VSPOne Columbus</fullName>
                </value>
                <value>
                    <fullName>VSPOne Dallas</fullName>
                </value>
                <value>
                    <fullName>VSPOne Fort Lauderdale</fullName>
                </value>
                <value>
                    <fullName>VSPOne Olympia</fullName>
                </value>
                <value>
                    <fullName>VSPOne Sacramento</fullName>
                </value>
                <value>
                    <fullName>VSPOne San Diego</fullName>
                </value>
                <value>
                    <fullName>VSPOne Tampa Bay</fullName>
                </value>
                <value>
                    <fullName>Tent Baltimore</fullName>
                </value>
                <value>
                    <fullName>Tent Charlotte</fullName>
                </value>
                <value>
                    <fullName>Tent Denver</fullName>
                </value>
                <value>
                    <fullName>Tent Hawaii</fullName>
                </value>
                <value>
                    <fullName>Tent Houston</fullName>
                </value>
                <value>
                    <fullName>Tent Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Tent New York</fullName>
                </value>
                <value>
                    <fullName>Tent St. Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>asofdate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>asofdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>of_Closed_Unmarked_Not_Expired_Boxes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label># of Closed, Unmarked, Not Expired Boxes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AL_IM_INC_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AL-IM INC</label>
        <queue>AL_IM_INC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AL_Inventory_Management_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AL-Inventory Management</label>
        <queue>AL_Inventory_Management</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>Altair_Cases_I_Own</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Classification__c</columns>
        <columns>Complaint__c</columns>
        <columns>Severity__c</columns>
        <columns>Notes__c</columns>
        <columns>Resolution__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Altair - Cases I Own</label>
    </listViews>
    <listViews>
        <fullName>CC_All_Queues</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Flag__c</columns>
        <columns>Product__c</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Customer_Care</value>
        </filters>
        <label>CC All Queues</label>
    </listViews>
    <listViews>
        <fullName>CC_All_Queues_Eyeconic</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Flag__c</columns>
        <columns>Product__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Eyeconic</value>
        </filters>
        <label>CC All Queues - Eyeconic</label>
    </listViews>
    <listViews>
        <fullName>CC_Dragon_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CC Dragon Queue</label>
        <queue>CC_Dragon_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CC_Eyeconic_Main_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CC Eyeconic Main Queue</label>
        <queue>CC_Eyeconic_Main_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CC_Eyeconic_Work_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CC Eyeconic Work Queue</label>
        <queue>CC_Eyeconic_Work_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CC_Knowledge_Authors_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CC Knowledge Authors</label>
        <queue>CC_Knowledge_Authors</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CC_Level_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CC Level Queue</label>
        <queue>CC_Level_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CC_Main_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Customer_Care</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>CC QA View</label>
    </listViews>
    <listViews>
        <fullName>CC_Main_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Flag__c</columns>
        <filterScope>Queue</filterScope>
        <label>CC Vision Benefits Queue</label>
        <queue>CC_Main_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CC_Marketing_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Queue</filterScope>
        <label>CC Marketing Queue</label>
        <queue>CC_Marketing_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CEC_Training</fullName>
        <active>true</active>
        <businessProcess>VSP Global</businessProcess>
        <label>CEC Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Delivery</fullName>
        <active>true</active>
        <businessProcess>VSP Global</businessProcess>
        <label>Client Delivery</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Care</fullName>
        <active>true</active>
        <businessProcess>VSP Global</businessProcess>
        <description>Used for VSP Global Customer Care Cases</description>
        <label>Customer Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eyeconic</fullName>
        <active>true</active>
        <businessProcess>VSP Global</businessProcess>
        <description>Used to track Eyeconic cases</description>
        <label>Eyeconic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Onsite_Clinics</fullName>
        <active>true</active>
        <businessProcess>VSP Global</businessProcess>
        <description>Used to track Onsite Clinics support cases</description>
        <label>Onsite Clinics</label>
    </recordTypes>
    <recordTypes>
        <fullName>VSPOne_Labs</fullName>
        <active>true</active>
        <businessProcess>VSP Global</businessProcess>
        <description>Used for VSPOne Lab case tracking</description>
        <label>VSPOne Labs</label>
    </recordTypes>
    <recordTypes>
        <fullName>VSP_Global</fullName>
        <active>true</active>
        <businessProcess>VSP Global</businessProcess>
        <label>VSP Global</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vision_Benefits</fullName>
        <active>true</active>
        <businessProcess>VSP Global</businessProcess>
        <label>Vision Benefits</label>
    </recordTypes>
    <validationRules>
        <fullName>VSPR22_OtherCaseDetailRequired</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES(Reason_for_Case__c, &quot;Other&quot;), true, false) 

&amp;&amp; 

ISPICKVAL(Product__c, &quot;Eyeconic Ops&quot;)

&amp;&amp;

ISBLANK(Other_Case_Detail__c) 

&amp;&amp; 

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP Technical User&quot;))

&amp;&amp;

NOT(ISCHANGED( System_Time_Stamp__c )
)</errorConditionFormula>
        <errorDisplayField>Other_Case_Detail__c</errorDisplayField>
        <errorMessage>You must provide a value in the Other Case Detail text box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR22_OtherReasonDetailRequired</fullName>
        <active>true</active>
        <errorConditionFormula>IF( INCLUDES( Reason_for_Contact__c , &quot;Other&quot;), true, false) 

&amp;&amp;

ISBLANK(Other_Reason_Detail__c )

&amp;&amp;

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;))

&amp;&amp;
NOT(ISCHANGED(System_Time_Stamp__c))</errorConditionFormula>
        <errorDisplayField>Other_Reason_Detail__c</errorDisplayField>
        <errorMessage>You must provide a value in the Other Reason Detail text box</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR22_Other_Resolution_Detail_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( INCLUDES( Reason_for_Contact__c , &quot;Other&quot;), true, false) 

&amp;&amp; 

OR( RecordType.Name == &apos;Customer Care&apos;, ISPICKVAL( Product__c , &quot;Eyeconic USC&quot;)) 

&amp;&amp; 

ISBLANK( Other_Resolution_Detail__c ) 


&amp;&amp; 

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP Integration User&quot;)) 

&amp;&amp; 
NOT(ISCHANGED( System_Time_Stamp__c ))</errorConditionFormula>
        <errorDisplayField>Other_Resolution_Detail__c</errorDisplayField>
        <errorMessage>You must provide a value in the Other Resolution Detail text box</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR22_ReasonForCaseRequired</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISCHANGED( OwnerId ))

&amp;&amp;

 OR(ISPICKVAL( Product__c, &quot;Eyeconic Ops&quot;),  ISPICKVAL( Product__c , &quot;Retail Store&quot;) )

&amp;&amp;

ISBLANK( Reason_for_Case__c )

&amp;&amp;

NOT(OR($Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Integration User&quot;))

&amp;&amp;

NOT(ISCHANGED(System_Time_Stamp__c))

&amp;&amp;

Quick_Action__c = False</errorConditionFormula>
        <errorDisplayField>Reason_for_Case__c</errorDisplayField>
        <errorMessage>You must select a value in the Reason for Case field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR22_RequiredFieldsByTopic</fullName>
        <active>true</active>
        <description>Validation rule that fires when the case record is updated</description>
        <errorConditionFormula>NOT(ISCHANGED(OwnerId))

&amp;&amp;

OR(
AND($RecordType.Name = &quot;Eyeconic&quot;, ISPICKVAL(Product__c, &quot;Eyeconic USC&quot;)),
$RecordType.Name = &quot;Customer Care&quot;)

&amp;&amp;

NOT(ISPICKVAL(Origin, &quot;Chat&quot;))

&amp;&amp;

ISPICKVAL(Status, &quot;Closed&quot;)

&amp;&amp;

OR(ISBLANK(Reason_for_Contact__c), ISBLANK(Caller_Type__c))

&amp;&amp;

NOT(ISCHANGED( System_Time_Stamp__c ))

&amp;&amp;

NOT(OR($Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Integration User&quot;))</errorConditionFormula>
        <errorMessage>You must provide a value in the Reason for Contact and Caller Type chosen box</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR24_CD_RequiredFieldstoCloseCase</fullName>
        <active>true</active>
        <description>Resolution and CD Category are required fields to close the case.</description>
        <errorConditionFormula>AND(RecordType.Name = &apos;Client Delivery&apos;,
				ISPICKVAL(Status,&quot;Closed&quot;), 
				OR(ISBLANK(Resolution__c),
							ISBLANK(TEXT(CD_Category__c))
								),
				NOT( $Profile.Name == &apos;System Administrator&apos;)
				)</errorConditionFormula>
        <errorMessage>You must select a CD Category and enter a Resolution before closing this Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR24_ContactReqdonCDCases</fullName>
        <active>true</active>
        <description>User must attach a Contact for all Client Delivery cases where Topic is Billing or Membership in order to close the Case.</description>
        <errorConditionFormula>AND(
RecordType.Name = &quot;Client Delivery&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
ISBLANK(Contact.Id),
OR(
    ISPICKVAL(Product__c, &quot;Billing&quot;),
    ISPICKVAL(Product__c, &quot;Membership&quot;),
				ISPICKVAL(Product__c, &quot;HP Plan Admin&quot;),
				ISPICKVAL(Product__c, &quot;HP Billing&quot;),
				ISPICKVAL(Product__c, &quot;EDI Membership&quot;)
				
  ),
				NOT( $Profile.Name = &apos;System Administrator&apos;)

)</errorConditionFormula>
        <errorDisplayField>ContactId</errorDisplayField>
        <errorMessage>To close this case, a Contact is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR24_OSC_Other_Topic_Details_Required</fullName>
        <active>true</active>
        <description>When user selects &quot;Other&quot; Topic, they must enter a value in the Other Topic Details field.</description>
        <errorConditionFormula>RecordType.Name = &apos;Onsite Clinics&apos;
&amp;&amp;
ISPICKVAL( Product__c, &quot;Other&quot;)
&amp;&amp;
ISBLANK( Other_Topic_Detail__c) 
&amp;&amp;
NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP Integration User&quot;))
&amp;&amp;
NOT(ISCHANGED( System_Time_Stamp__c ))</errorConditionFormula>
        <errorDisplayField>Other_Topic_Detail__c</errorDisplayField>
        <errorMessage>You must provide a value in the Other Topic Detail text box.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR25_TopicRequiredtoCloseOSCCase</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name = &apos;Onsite Clinics&apos;,
ISPICKVAL( Status ,&quot;Closed&quot;), 
ISBLANK(TEXT( Product__c )))

&amp;&amp;

NOT( $Profile.Name == &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>You must select a Topic before closing this case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR29_CDCaseClosureReqFieldsOriginPhone</fullName>
        <active>true</active>
        <description>Contact is required to close a CD Case with origin Phone.</description>
        <errorConditionFormula>RecordType.Name == &apos;Client Delivery&apos; 

&amp;&amp; 

ISPICKVAL( Origin , &apos;Phone&apos;) 

&amp;&amp; 

ISBLANK(Contact.Phone) 

&amp;&amp;

ISPICKVAL(Status, &quot;Closed&quot;)

&amp;&amp;

ISBLANK(Contact.Id)

&amp;&amp; 

NOT($Profile.Name = &apos;System Administrator&apos; || $Profile.Name = &apos;VSP Technical User&apos;)</errorConditionFormula>
        <errorMessage>A contact name is required on all phone cases.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR29_CDCaseReqPhoneWhenOriginPhone</fullName>
        <active>true</active>
        <description>Fields required to close a client delivery case when the origin is Phone.</description>
        <errorConditionFormula>RecordType.Name == &apos;Client Delivery&apos; 

&amp;&amp; 

ISPICKVAL( Origin , &apos;Phone&apos;) 

&amp;&amp; 

ISBLANK(Contact.Phone) 

&amp;&amp; 

ISBLANK( Callback_Phone__c ) 

&amp;&amp; 

NOT($Profile.Name = &apos;System Administrator&apos; || $Profile.Name = &apos;VSP Technical User&apos;)</errorConditionFormula>
        <errorMessage>A Phone Number is Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR30_AmountOfAppeasement_ReasonCase</fullName>
        <active>true</active>
        <description>The Amount of Appeasement field becomes mandatory when Reason for Case = Product Appeasement (waiting fulfillment)</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Eyeconic&apos;

&amp;&amp;

INCLUDES(Reason_for_Case__c, &apos;Product Appeasements (Waiting FulFillment)&apos;)

&amp;&amp;

ISBLANK(Amount_of_Appeasement__c)

&amp;&amp;

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorDisplayField>Amount_of_Appeasement__c</errorDisplayField>
        <errorMessage>You must enter an Amount of Appeasement before saving the case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR30_Case_Prod_Info_Contacts_Required</fullName>
        <active>true</active>
        <description>If Product Information equals Frames, then all four fields are required 

# of Closed, Unmarked, Not Expired Boxes
Right Eye and Left Eye quantity
Brand Name
Number of loose contact lenses</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Eyeconic&apos; 

&amp;&amp; 

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;)) 

&amp;&amp; 
(
ISBLANK(of_Closed_Unmarked_Not_Expired_Boxes__c)  				
    
||
    
ISBLANK(Brand_Name__c) 
  
||
  
ISBLANK(Number_of_Loose_Contact_Lenses__c) 
  
||
  
ISBLANK(Right_Eye_and_Left_Eye_Quantity__c) 
)
&amp;&amp; 

INCLUDES(Product_Information__c, &apos;Contact Lenses&apos;)</errorConditionFormula>
        <errorMessage>The following fields are required # of Closed, Unmarked, Right Eye and Left Eye quantity, Brand Name, and Number of Loose Contact Lenses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR30_Case_Product_Info_Frames_Required</fullName>
        <active>true</active>
        <description>If Product Information equals Frames, then all three fields are required 

Frame Model
Frame Color
Frame Size</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Eyeconic&apos; 

&amp;&amp; 

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;)) 

&amp;&amp; 
(
ISBLANK(Frame_Model__c)  				
  
||
  
ISBLANK(Frame_Color__c) 
  
||

ISBLANK(Frame_Size__c) 
)
&amp;&amp; 

INCLUDES(Product_Information__c, &apos;Frame&apos;)</errorConditionFormula>
        <errorMessage>The Frame Model, Frame Color, and Frame Size fields are required when Product Information is Frame.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR30_Case_Product_Info_Required</fullName>
        <active>true</active>
        <description>Required if &apos;Refund&apos; &apos;Cancellation&apos; &apos;Back Order&apos; or &apos;Exchange / Warranty&apos; is selected for Reason for Case.</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Eyeconic&apos; 

&amp;&amp; 

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;)) 

&amp;&amp; 

ISBLANK(Product_Information__c) 

&amp;&amp; 

(	
INCLUDES(Reason_for_Case__c, &apos;Refund&apos;) 

|| 

INCLUDES(Reason_for_Case__c, &apos;Exchange / Warranty&apos;) 

|| 

INCLUDES(Reason_for_Case__c, &apos;Cancellation&apos;)	
				
|| 

INCLUDES(Reason_for_Case__c, &apos;Back Order&apos;)	
)</errorConditionFormula>
        <errorDisplayField>Product_Information__c</errorDisplayField>
        <errorMessage>Product Information is required if &apos;Refund&apos; &apos;Cancellation&apos; &apos;Back Order&apos; or &apos;Exchange / Warranty&apos; is selected for Reason for Case</errorMessage>
    </validationRules>
</CustomObject>